--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,6 @@
 *.diff
 *.err
 *.log
-*.orig
-*.rej
-*.swo
-*.swp
-*.vi
-*.zip
 *~
 
 # OS or Editor folders
@@ -17,17 +11,11 @@
 .idea
 .project
 .settings
-.tmproj
-*.esproj
-*.sublime-project
-*.sublime-workspace
-nbproject
-Thumbs.db
 /.vscode/
-# Local Netlify folder
-.netlify
-
 
 
 # Folders to ignore
 /node_modules/
+/test/
+/tmp/
+/archives
